# svelte-flask-example

./: .gitignore  package-lock.json  package.json  pyproject.toml  rollup.config.js  server.py
client/src/: App.svelte  main.js
